tests/compile/switch-2.c
/**
RUN: %scc %s 2>&1 | filecheck %s
*/

int
main()
{
  // CHECK: error: default outside of switch statement
  default 'a':
}